deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: resume
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: resume
    spec:
      containers:
      - name: resume
        image: 322209956530.dkr.ecr.eu-north-1.amazonaws.com/balaji-resume:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
