service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: resume
